corpus/kernel/6.17/driver-api/media/drivers/index.md
---
collection: kernel
version: "6.17"
title: "9. Media driver-specific documentation"
source_url: https://www.kernel.org/doc/html/v6.17/driver-api/media/drivers/index.html
fetched_at: 2026-09-16T16:37:17+00:00
---
# 9. Media driver-specific documentation

## 9.1. Video4Linux (V4L) drivers

- [9.1.1. The bttv driver](bttv-devel.md)
  - [9.1.1.1. bttv and sound mini howto](bttv-devel.md#bttv-and-sound-mini-howto)
    - [9.1.1.1.1. How sound works in detail](bttv-devel.md#how-sound-works-in-detail)
- [9.1.2. The cx2341x driver](cx2341x-devel.md)
  - [9.1.2.1. Memory at cx2341x chips](cx2341x-devel.md#memory-at-cx2341x-chips)
    - [9.1.2.1.1. Memory Map](cx2341x-devel.md#memory-map)
    - [9.1.2.1.2. Registers](cx2341x-devel.md#registers)
    - [9.1.2.1.3. Interrupt Status Register](cx2341x-devel.md#interrupt-status-register)
  - [9.1.2.2. Missing documentation](cx2341x-devel.md#missing-documentation)
  - [9.1.2.3. The cx2341x firmware upload](cx2341x-devel.md#the-cx2341x-firmware-upload)
    - [9.1.2.3.1. How to find](cx2341x-devel.md#how-to-find)
    - [9.1.2.3.2. How to load](cx2341x-devel.md#how-to-load)
  - [9.1.2.4. How to call the firmware API](cx2341x-devel.md#how-to-call-the-firmware-api)
  - [9.1.2.5. OSD firmware API description](cx2341x-devel.md#osd-firmware-api-description)
    - [9.1.2.5.1. CX2341X_OSD_GET_FRAMEBUFFER](cx2341x-devel.md#cx2341x-osd-get-framebuffer)
      - [9.1.2.5.1.1. Description](cx2341x-devel.md#description)
      - [9.1.2.5.1.2. Result[0]](cx2341x-devel.md#result-0)
      - [9.1.2.5.1.3. Result[1]](cx2341x-devel.md#result-1)
    - [9.1.2.5.2. CX2341X_OSD_GET_PIXEL_FORMAT](cx2341x-devel.md#cx2341x-osd-get-pixel-format)
      - [9.1.2.5.2.1. Description](cx2341x-devel.md#id1)
      - [9.1.2.5.2.2. Result[0]](cx2341x-devel.md#id2)
    - [9.1.2.5.3. CX2341X_OSD_SET_PIXEL_FORMAT](cx2341x-devel.md#cx2341x-osd-set-pixel-format)
      - [9.1.2.5.3.1. Description](cx2341x-devel.md#id3)
      - [9.1.2.5.3.2. Param[0]](cx2341x-devel.md#param-0)
    - [9.1.2.5.4. CX2341X_OSD_GET_STATE](cx2341x-devel.md#cx2341x-osd-get-state)
      - [9.1.2.5.4.1. Description](cx2341x-devel.md#id4)
      - [9.1.2.5.4.2. Result[0]](cx2341x-devel.md#id5)
    - [9.1.2.5.5. CX2341X_OSD_SET_STATE](cx2341x-devel.md#cx2341x-osd-set-state)
      - [9.1.2.5.5.1. Description](cx2341x-devel.md#id6)
      - [9.1.2.5.5.2. Param[0]](cx2341x-devel.md#id7)
    - [9.1.2.5.6. CX2341X_OSD_GET_OSD_COORDS](cx2341x-devel.md#cx2341x-osd-get-osd-coords)
      - [9.1.2.5.6.1. Description](cx2341x-devel.md#id8)
      - [9.1.2.5.6.2. Result[0]](cx2341x-devel.md#id9)
      - [9.1.2.5.6.3. Result[1]](cx2341x-devel.md#id10)
      - [9.1.2.5.6.4. Result[2]](cx2341x-devel.md#result-2)
      - [9.1.2.5.6.5. Result[3]](cx2341x-devel.md#result-3)
      - [9.1.2.5.6.6. Result[4]](cx2341x-devel.md#result-4)
    - [9.1.2.5.7. CX2341X_OSD_SET_OSD_COORDS](cx2341x-devel.md#cx2341x-osd-set-osd-coords)
      - [9.1.2.5.7.1. Description](cx2341x-devel.md#id11)
      - [9.1.2.5.7.2. Param[0]](cx2341x-devel.md#id12)
      - [9.1.2.5.7.3. Param[1]](cx2341x-devel.md#param-1)
      - [9.1.2.5.7.4. Param[2]](cx2341x-devel.md#param-2)
      - [9.1.2.5.7.5. Param[3]](cx2341x-devel.md#param-3)
      - [9.1.2.5.7.6. Param[4]](cx2341x-devel.md#param-4)
    - [9.1.2.5.8. CX2341X_OSD_GET_SCREEN_COORDS](cx2341x-devel.md#cx2341x-osd-get-screen-coords)
      - [9.1.2.5.8.1. Description](cx2341x-devel.md#id13)
      - [9.1.2.5.8.2. Result[0]](cx2341x-devel.md#id14)
      - [9.1.2.5.8.3. Result[1]](cx2341x-devel.md#id15)
      - [9.1.2.5.8.4. Result[2]](cx2341x-devel.md#id16)
      - [9.1.2.5.8.5. Result[3]](cx2341x-devel.md#id17)
    - [9.1.2.5.9. CX2341X_OSD_SET_SCREEN_COORDS](cx2341x-devel.md#cx2341x-osd-set-screen-coords)
      - [9.1.2.5.9.1. Description](cx2341x-devel.md#id18)
      - [9.1.2.5.9.2. Param[0]](cx2341x-devel.md#id19)
      - [9.1.2.5.9.3. Param[1]](cx2341x-devel.md#id20)
      - [9.1.2.5.9.4. Param[2]](cx2341x-devel.md#id21)
      - [9.1.2.5.9.5. Param[3]](cx2341x-devel.md#id22)
    - [9.1.2.5.10. CX2341X_OSD_GET_GLOBAL_ALPHA](cx2341x-devel.md#cx2341x-osd-get-global-alpha)
      - [9.1.2.5.10.1. Description](cx2341x-devel.md#id23)
      - [9.1.2.5.10.2. Result[0]](cx2341x-devel.md#id24)
      - [9.1.2.5.10.3. Result[1]](cx2341x-devel.md#id25)
    - [9.1.2.5.11. CX2341X_OSD_SET_GLOBAL_ALPHA](cx2341x-devel.md#cx2341x-osd-set-global-alpha)
      - [9.1.2.5.11.1. Description](cx2341x-devel.md#id26)
      - [9.1.2.5.11.2. Param[0]](cx2341x-devel.md#id27)
      - [9.1.2.5.11.3. Param[1]](cx2341x-devel.md#id28)
      - [9.1.2.5.11.4. Param[2]](cx2341x-devel.md#id29)
    - [9.1.2.5.12. CX2341X_OSD_SET_BLEND_COORDS](cx2341x-devel.md#cx2341x-osd-set-blend-coords)
      - [9.1.2.5.12.1. Description](cx2341x-devel.md#id30)
      - [9.1.2.5.12.2. Param[0]](cx2341x-devel.md#id31)
      - [9.1.2.5.12.3. Param[1]](cx2341x-devel.md#id32)
    - [9.1.2.5.13. CX2341X_OSD_GET_FLICKER_STATE](cx2341x-devel.md#cx2341x-osd-get-flicker-state)
      - [9.1.2.5.13.1. Description](cx2341x-devel.md#id33)
      - [9.1.2.5.13.2. Result[0]](cx2341x-devel.md#id34)
    - [9.1.2.5.14. CX2341X_OSD_SET_FLICKER_STATE](cx2341x-devel.md#cx2341x-osd-set-flicker-state)
      - [9.1.2.5.14.1. Description](cx2341x-devel.md#id35)
      - [9.1.2.5.14.2. Param[0]](cx2341x-devel.md#id36)
    - [9.1.2.5.15. CX2341X_OSD_BLT_COPY](cx2341x-devel.md#cx2341x-osd-blt-copy)
      - [9.1.2.5.15.1. Description](cx2341x-devel.md#id37)
      - [9.1.2.5.15.2. Param[0]](cx2341x-devel.md#id38)
      - [9.1.2.5.15.3. Param[1]](cx2341x-devel.md#id39)
      - [9.1.2.5.15.4. Param[2]](cx2341x-devel.md#id40)
      - [9.1.2.5.15.5. Param[3]](cx2341x-devel.md#id41)
      - [9.1.2.5.15.6. Param[4]](cx2341x-devel.md#id42)
      - [9.1.2.5.15.7. Param[5]](cx2341x-devel.md#param-5)
      - [9.1.2.5.15.8. Param[6]](cx2341x-devel.md#param-6)
      - [9.1.2.5.15.9. Param[7]](cx2341x-devel.md#param-7)
      - [9.1.2.5.15.10. Param[8]](cx2341x-devel.md#param-8)
      - [9.1.2.5.15.11. Param[9]](cx2341x-devel.md#param-9)
    - [9.1.2.5.16. CX2341X_OSD_BLT_FILL](cx2341x-devel.md#cx2341x-osd-blt-fill)
      - [9.1.2.5.16.1. Description](cx2341x-devel.md#id43)
      - [9.1.2.5.16.2. Param[0]](cx2341x-devel.md#id44)
      - [9.1.2.5.16.3. Param[1]](cx2341x-devel.md#id45)
      - [9.1.2.5.16.4. Param[2]](cx2341x-devel.md#id46)
      - [9.1.2.5.16.5. Param[3]](cx2341x-devel.md#id47)
      - [9.1.2.5.16.6. Param[4]](cx2341x-devel.md#id48)
      - [9.1.2.5.16.7. Param[5]](cx2341x-devel.md#id49)
      - [9.1.2.5.16.8. Param[6]](cx2341x-devel.md#id50)
      - [9.1.2.5.16.9. Param[7]](cx2341x-devel.md#id51)
      - [9.1.2.5.16.10. Param[8]](cx2341x-devel.md#id52)
    - [9.1.2.5.17. CX2341X_OSD_BLT_TEXT](cx2341x-devel.md#cx2341x-osd-blt-text)
      - [9.1.2.5.17.1. Description](cx2341x-devel.md#id53)
      - [9.1.2.5.17.2. Param[0]](cx2341x-devel.md#id54)
      - [9.1.2.5.17.3. Param[1]](cx2341x-devel.md#id55)
      - [9.1.2.5.17.4. Param[2]](cx2341x-devel.md#id56)
      - [9.1.2.5.17.5. Param[3]](cx2341x-devel.md#id57)
      - [9.1.2.5.17.6. Param[4]](cx2341x-devel.md#id58)
      - [9.1.2.5.17.7. Param[5]](cx2341x-devel.md#id59)
      - [9.1.2.5.17.8. Param[6]](cx2341x-devel.md#id60)
      - [9.1.2.5.17.9. Param[7]](cx2341x-devel.md#id61)
      - [9.1.2.5.17.10. Param[8]](cx2341x-devel.md#id62)
      - [9.1.2.5.17.11. Param[9]](cx2341x-devel.md#id63)
      - [9.1.2.5.17.12. Param[10]](cx2341x-devel.md#param-10)
    - [9.1.2.5.18. CX2341X_OSD_SET_FRAMEBUFFER_WINDOW](cx2341x-devel.md#cx2341x-osd-set-framebuffer-window)
      - [9.1.2.5.18.1. Description](cx2341x-devel.md#id64)
      - [9.1.2.5.18.2. Param[0]](cx2341x-devel.md#id65)
      - [9.1.2.5.18.3. Param[1]](cx2341x-devel.md#id66)
      - [9.1.2.5.18.4. Param[2]](cx2341x-devel.md#id67)
      - [9.1.2.5.18.5. Param[3]](cx2341x-devel.md#id68)
    - [9.1.2.5.19. CX2341X_OSD_SET_CHROMA_KEY](cx2341x-devel.md#cx2341x-osd-set-chroma-key)
      - [9.1.2.5.19.1. Description](cx2341x-devel.md#id69)
      - [9.1.2.5.19.2. Param[0]](cx2341x-devel.md#id70)
      - [9.1.2.5.19.3. Param[1]](cx2341x-devel.md#id71)
    - [9.1.2.5.20. CX2341X_OSD_GET_ALPHA_CONTENT_INDEX](cx2341x-devel.md#cx2341x-osd-get-alpha-content-index)
      - [9.1.2.5.20.1. Description](cx2341x-devel.md#id72)
      - [9.1.2.5.20.2. Result[0]](cx2341x-devel.md#id73)
    - [9.1.2.5.21. CX2341X_OSD_SET_ALPHA_CONTENT_INDEX](cx2341x-devel.md#cx2341x-osd-set-alpha-content-index)
      - [9.1.2.5.21.1. Description](cx2341x-devel.md#id74)
      - [9.1.2.5.21.2. Param[0]](cx2341x-devel.md#id75)
  - [9.1.2.6. Encoder firmware API description](cx2341x-devel.md#encoder-firmware-api-description)
    - [9.1.2.6.1. CX2341X_ENC_PING_FW](cx2341x-devel.md#cx2341x-enc-ping-fw)
      - [9.1.2.6.1.1. Description](cx2341x-devel.md#id76)
    - [9.1.2.6.2. CX2341X_ENC_START_CAPTURE](cx2341x-devel.md#cx2341x-enc-start-capture)
      - [9.1.2.6.2.1. Description](cx2341x-devel.md#id77)
      - [9.1.2.6.2.2. Param[0]](cx2341x-devel.md#id78)
      - [9.1.2.6.2.3. Param[1]](cx2341x-devel.md#id79)
    - [9.1.2.6.3. CX2341X_ENC_STOP_CAPTURE](cx2341x-devel.md#cx2341x-enc-stop-capture)
      - [9.1.2.6.3.1. Description](cx2341x-devel.md#id80)
      - [9.1.2.6.3.2. Param[0]](cx2341x-devel.md#id81)
      - [9.1.2.6.3.3. Param[1]](cx2341x-devel.md#id82)
      - [9.1.2.6.3.4. Param[2]](cx2341x-devel.md#id83)
    - [9.1.2.6.4. CX2341X_ENC_SET_AUDIO_ID](cx2341x-devel.md#cx2341x-enc-set-audio-id)
      - [9.1.2.6.4.1. Description](cx2341x-devel.md#id84)
      - [9.1.2.6.4.2. Param[0]](cx2341x-devel.md#id85)
    - [9.1.2.6.5. CX2341X_ENC_SET_VIDEO_ID](cx2341x-devel.md#cx2341x-enc-set-video-id)
      - [9.1.2.6.5.1. Description](cx2341x-devel.md#id86)
      - [9.1.2.6.5.2. Param[0]](cx2341x-devel.md#id87)
    - [9.1.2.6.6. CX2341X_ENC_SET_PCR_ID](cx2341x-devel.md#cx2341x-enc-set-pcr-id)
      - [9.1.2.6.6.1. Description](cx2341x-devel.md#id88)
      - [9.1.2.6.6.2. Param[0]](cx2341x-devel.md#id89)
    - [9.1.2.6.7. CX2341X_ENC_SET_FRAME_RATE](cx2341x-devel.md#cx2341x-enc-set-frame-rate)
      - [9.1.2.6.7.1. Description](cx2341x-devel.md#id90)
      - [9.1.2.6.7.2. Param[0]](cx2341x-devel.md#id91)
    - [9.1.2.6.8. CX2341X_ENC_SET_FRAME_SIZE](cx2341x-devel.md#cx2341x-enc-set-frame-size)
      - [9.1.2.6.8.1. Description](cx2341x-devel.md#id92)
      - [9.1.2.6.8.2. Param[0]](cx2341x-devel.md#id93)
      - [9.1.2.6.8.3. Param[1]](cx2341x-devel.md#id94)
    - [9.1.2.6.9. CX2341X_ENC_SET_BIT_RATE](cx2341x-devel.md#cx2341x-enc-set-bit-rate)
      - [9.1.2.6.9.1. Description](cx2341x-devel.md#id95)
      - [9.1.2.6.9.2. Param[0]](cx2341x-devel.md#id96)
      - [9.1.2.6.9.3. Param[1]](cx2341x-devel.md#id97)
      - [9.1.2.6.9.4. Param[2]](cx2341x-devel.md#id98)
      - [9.1.2.6.9.5. Param[3]](cx2341x-devel.md#id99)
      - [9.1.2.6.9.6. Param[4]](cx2341x-devel.md#id100)
      - [9.1.2.6.9.7. Param[5]](cx2341x-devel.md#id101)
    - [9.1.2.6.10. CX2341X_ENC_SET_GOP_PROPERTIES](cx2341x-devel.md#cx2341x-enc-set-gop-properties)
      - [9.1.2.6.10.1. Description](cx2341x-devel.md#id102)
      - [9.1.2.6.10.2. Param[0]](cx2341x-devel.md#id103)
      - [9.1.2.6.10.3. Param[1]](cx2341x-devel.md#id104)
    - [9.1.2.6.11. CX2341X_ENC_SET_ASPECT_RATIO](cx2341x-devel.md#cx2341x-enc-set-aspect-ratio)
      - [9.1.2.6.11.1. Description](cx2341x-devel.md#id105)
      - [9.1.2.6.11.2. Param[0]](cx2341x-devel.md#id106)
    - [9.1.2.6.12. CX2341X_ENC_SET_DNR_FILTER_MODE](cx2341x-devel.md#cx2341x-enc-set-dnr-filter-mode)
      - [9.1.2.6.12.1. Description](cx2341x-devel.md#id107)
      - [9.1.2.6.12.2. Param[0]](cx2341x-devel.md#id108)
      - [9.1.2.6.12.3. Param[1]](cx2341x-devel.md#id109)
    - [9.1.2.6.13. CX2341X_ENC_SET_DNR_FILTER_PROPS](cx2341x-devel.md#cx2341x-enc-set-dnr-filter-props)
      - [9.1.2.6.13.1. Description](cx2341x-devel.md#id110)
      - [9.1.2.6.13.2. Param[0]](cx2341x-devel.md#id111)
      - [9.1.2.6.13.3. Param[1]](cx2341x-devel.md#id112)
    - [9.1.2.6.14. CX2341X_ENC_SET_CORING_LEVELS](cx2341x-devel.md#cx2341x-enc-set-coring-levels)
      - [9.1.2.6.14.1. Description](cx2341x-devel.md#id113)
      - [9.1.2.6.14.2. Param[0]](cx2341x-devel.md#id114)
      - [9.1.2.6.14.3. Param[1]](cx2341x-devel.md#id115)
      - [9.1.2.6.14.4. Param[2]](cx2341x-devel.md#id116)
      - [9.1.2.6.14.5. Param[3]](cx2341x-devel.md#id117)
    - [9.1.2.6.15. CX2341X_ENC_SET_SPATIAL_FILTER_TYPE](cx2341x-devel.md#cx2341x-enc-set-spatial-filter-type)
      - [9.1.2.6.15.1. Description](cx2341x-devel.md#id118)
      - [9.1.2.6.15.2. Param[0]](cx2341x-devel.md#id119)
      - [9.1.2.6.15.3. Param[1]](cx2341x-devel.md#id120)
    - [9.1.2.6.16. CX2341X_ENC_SET_VBI_LINE](cx2341x-devel.md#cx2341x-enc-set-vbi-line)
      - [9.1.2.6.16.1. Description](cx2341x-devel.md#id121)
      - [9.1.2.6.16.2. Param[0]](cx2341x-devel.md#id122)
      - [9.1.2.6.16.3. Param[1]](cx2341x-devel.md#id123)
      - [9.1.2.6.16.4. Param[2]](cx2341x-devel.md#id124)
      - [9.1.2.6.16.5. Param[3]](cx2341x-devel.md#id125)
      - [9.1.2.6.16.6. Param[4]](cx2341x-devel.md#id126)
    - [9.1.2.6.17. CX2341X_ENC_SET_STREAM_TYPE](cx2341x-devel.md#cx2341x-enc-set-stream-type)
      - [9.1.2.6.17.1. Description](cx2341x-devel.md#id127)
      - [9.1.2.6.17.2. Param[0]](cx2341x-devel.md#id128)
    - [9.1.2.6.18. CX2341X_ENC_SET_OUTPUT_PORT](cx2341x-devel.md#cx2341x-enc-set-output-port)
      - [9.1.2.6.18.1. Description](cx2341x-devel.md#id129)
      - [9.1.2.6.18.2. Param[0]](cx2341x-devel.md#id130)
      - [9.1.2.6.18.3. Param[1]](cx2341x-devel.md#id131)
    - [9.1.2.6.19. CX2341X_ENC_SET_AUDIO_PROPERTIES](cx2341x-devel.md#cx2341x-enc-set-audio-properties)
      - [9.1.2.6.19.1. Description](cx2341x-devel.md#id132)
      - [9.1.2.6.19.2. Param[0]](cx2341x-devel.md#id133)
    - [9.1.2.6.20. CX2341X_ENC_HALT_FW](cx2341x-devel.md#cx2341x-enc-halt-fw)
      - [9.1.2.6.20.1. Description](cx2341x-devel.md#id134)
    - [9.1.2.6.21. CX2341X_ENC_GET_VERSION](cx2341x-devel.md#cx2341x-enc-get-version)
      - [9.1.2.6.21.1. Description](cx2341x-devel.md#id135)
      - [9.1.2.6.21.2. Result[0]](cx2341x-devel.md#id136)
    - [9.1.2.6.22. CX2341X_ENC_SET_GOP_CLOSURE](cx2341x-devel.md#cx2341x-enc-set-gop-closure)
      - [9.1.2.6.22.1. Description](cx2341x-devel.md#id137)
      - [9.1.2.6.22.2. Param[0]](cx2341x-devel.md#id138)
    - [9.1.2.6.23. CX2341X_ENC_GET_SEQ_END](cx2341x-devel.md#cx2341x-enc-get-seq-end)
      - [9.1.2.6.23.1. Description](cx2341x-devel.md#id139)
      - [9.1.2.6.23.2. Result[0]](cx2341x-devel.md#id140)
      - [9.1.2.6.23.3. Result[1]](cx2341x-devel.md#id141)
    - [9.1.2.6.24. CX2341X_ENC_SET_PGM_INDEX_INFO](cx2341x-devel.md#cx2341x-enc-set-pgm-index-info)
      - [9.1.2.6.24.1. Description](cx2341x-devel.md#id142)
      - [9.1.2.6.24.2. Param[0]](cx2341x-devel.md#id143)
      - [9.1.2.6.24.3. Param[1]](cx2341x-devel.md#id144)
      - [9.1.2.6.24.4. Result[0]](cx2341x-devel.md#id145)
      - [9.1.2.6.24.5. Result[1]](cx2341x-devel.md#id146)
    - [9.1.2.6.25. CX2341X_ENC_SET_VBI_CONFIG](cx2341x-devel.md#cx2341x-enc-set-vbi-config)
      - [9.1.2.6.25.1. Description](cx2341x-devel.md#id147)
      - [9.1.2.6.25.2. Param[0]](cx2341x-devel.md#id148)
      - [9.1.2.6.25.3. Param[1]](cx2341x-devel.md#id149)
      - [9.1.2.6.25.4. Param[2]](cx2341x-devel.md#id150)
      - [9.1.2.6.25.5. Param[3]](cx2341x-devel.md#id151)
      - [9.1.2.6.25.6. Param[4]](cx2341x-devel.md#id152)
      - [9.1.2.6.25.7. Param[5]](cx2341x-devel.md#id153)
      - [9.1.2.6.25.8. Param[6]](cx2341x-devel.md#id154)
      - [9.1.2.6.25.9. Result[0]](cx2341x-devel.md#id155)
      - [9.1.2.6.25.10. Result[1]](cx2341x-devel.md#id156)
      - [9.1.2.6.25.11. Result[2]](cx2341x-devel.md#id157)
    - [9.1.2.6.26. CX2341X_ENC_SET_DMA_BLOCK_SIZE](cx2341x-devel.md#cx2341x-enc-set-dma-block-size)
      - [9.1.2.6.26.1. Description](cx2341x-devel.md#id158)
      - [9.1.2.6.26.2. Param[0]](cx2341x-devel.md#id159)
      - [9.1.2.6.26.3. Param[1]](cx2341x-devel.md#id160)
    - [9.1.2.6.27. CX2341X_ENC_GET_PREV_DMA_INFO_MB_10](cx2341x-devel.md#cx2341x-enc-get-prev-dma-info-mb-10)
      - [9.1.2.6.27.1. Description](cx2341x-devel.md#id161)
      - [9.1.2.6.27.2. Result[0]](cx2341x-devel.md#id162)
      - [9.1.2.6.27.3. Result[1]](cx2341x-devel.md#id163)
      - [9.1.2.6.27.4. Result[2]](cx2341x-devel.md#id164)
    - [9.1.2.6.28. CX2341X_ENC_GET_PREV_DMA_INFO_MB_9](cx2341x-devel.md#cx2341x-enc-get-prev-dma-info-mb-9)
      - [9.1.2.6.28.1. Description](cx2341x-devel.md#id165)
      - [9.1.2.6.28.2. Result[0]](cx2341x-devel.md#id166)
      - [9.1.2.6.28.3. Result[1]](cx2341x-devel.md#id167)
      - [9.1.2.6.28.4. Result[2]](cx2341x-devel.md#id168)
      - [9.1.2.6.28.5. Result[3]](cx2341x-devel.md#id169)
    - [9.1.2.6.29. CX2341X_ENC_SCHED_DMA_TO_HOST](cx2341x-devel.md#cx2341x-enc-sched-dma-to-host)
      - [9.1.2.6.29.1. Description](cx2341x-devel.md#id170)
      - [9.1.2.6.29.2. Param[0]](cx2341x-devel.md#id171)
      - [9.1.2.6.29.3. Param[1]](cx2341x-devel.md#id172)
      - [9.1.2.6.29.4. Param[2]](cx2341x-devel.md#id173)
    - [9.1.2.6.30. CX2341X_ENC_INITIALIZE_INPUT](cx2341x-devel.md#cx2341x-enc-initialize-input)
      - [9.1.2.6.30.1. Description](cx2341x-devel.md#id174)
    - [9.1.2.6.31. CX2341X_ENC_SET_FRAME_DROP_RATE](cx2341x-devel.md#cx2341x-enc-set-frame-drop-rate)
      - [9.1.2.6.31.1. Description](cx2341x-devel.md#id175)
      - [9.1.2.6.31.2. Param[0]](cx2341x-devel.md#id176)
    - [9.1.2.6.32. CX2341X_ENC_PAUSE_ENCODER](cx2341x-devel.md#cx2341x-enc-pause-encoder)
      - [9.1.2.6.32.1. Description](cx2341x-devel.md#id177)
      - [9.1.2.6.32.2. Param[0]](cx2341x-devel.md#id178)
    - [9.1.2.6.33. CX2341X_ENC_REFRESH_INPUT](cx2341x-devel.md#cx2341x-enc-refresh-input)
      - [9.1.2.6.33.1. Description](cx2341x-devel.md#id179)
    - [9.1.2.6.34. CX2341X_ENC_SET_COPYRIGHT](cx2341x-devel.md#cx2341x-enc-set-copyright)
      - [9.1.2.6.34.1. Description](cx2341x-devel.md#id180)
      - [9.1.2.6.34.2. Param[0]](cx2341x-devel.md#id181)
    - [9.1.2.6.35. CX2341X_ENC_SET_EVENT_NOTIFICATION](cx2341x-devel.md#cx2341x-enc-set-event-notification)
      - [9.1.2.6.35.1. Description](cx2341x-devel.md#id182)
      - [9.1.2.6.35.2. Param[0]](cx2341x-devel.md#id183)
      - [9.1.2.6.35.3. Param[1]](cx2341x-devel.md#id184)
      - [9.1.2.6.35.4. Param[2]](cx2341x-devel.md#id185)
      - [9.1.2.6.35.5. Param[3]](cx2341x-devel.md#id186)
    - [9.1.2.6.36. CX2341X_ENC_SET_NUM_VSYNC_LINES](cx2341x-devel.md#cx2341x-enc-set-num-vsync-lines)
      - [9.1.2.6.36.1. Description](cx2341x-devel.md#id187)
      - [9.1.2.6.36.2. Param[0]](cx2341x-devel.md#id188)
      - [9.1.2.6.36.3. Param[1]](cx2341x-devel.md#id189)
    - [9.1.2.6.37. CX2341X_ENC_SET_PLACEHOLDER](cx2341x-devel.md#cx2341x-enc-set-placeholder)
      - [9.1.2.6.37.1. Description](cx2341x-devel.md#id190)
      - [9.1.2.6.37.2. Param[0]](cx2341x-devel.md#id191)
      - [9.1.2.6.37.3. Param[1]](cx2341x-devel.md#id192)
      - [9.1.2.6.37.4. Param[2]](cx2341x-devel.md#id193)
      - [9.1.2.6.37.5. Param[3]](cx2341x-devel.md#id194)
      - [9.1.2.6.37.6. Param[4]](cx2341x-devel.md#id195)
      - [9.1.2.6.37.7. Param[5]](cx2341x-devel.md#id196)
      - [9.1.2.6.37.8. Param[6]](cx2341x-devel.md#id197)
      - [9.1.2.6.37.9. Param[7]](cx2341x-devel.md#id198)
      - [9.1.2.6.37.10. Param[8]](cx2341x-devel.md#id199)
      - [9.1.2.6.37.11. Param[9]](cx2341x-devel.md#id200)
      - [9.1.2.6.37.12. Param[10]](cx2341x-devel.md#id201)
      - [9.1.2.6.37.13. Param[11]](cx2341x-devel.md#param-11)
    - [9.1.2.6.38. CX2341X_ENC_MUTE_VIDEO](cx2341x-devel.md#cx2341x-enc-mute-video)
      - [9.1.2.6.38.1. Description](cx2341x-devel.md#id202)
      - [9.1.2.6.38.2. Param[0]](cx2341x-devel.md#id203)
    - [9.1.2.6.39. CX2341X_ENC_MUTE_AUDIO](cx2341x-devel.md#cx2341x-enc-mute-audio)
      - [9.1.2.6.39.1. Description](cx2341x-devel.md#id204)
      - [9.1.2.6.39.2. Param[0]](cx2341x-devel.md#id205)
    - [9.1.2.6.40. CX2341X_ENC_SET_VERT_CROP_LINE](cx2341x-devel.md#cx2341x-enc-set-vert-crop-line)
      - [9.1.2.6.40.1. Description](cx2341x-devel.md#id206)
      - [9.1.2.6.40.2. Param[0]](cx2341x-devel.md#id207)
    - [9.1.2.6.41. CX2341X_ENC_MISC](cx2341x-devel.md#cx2341x-enc-misc)
      - [9.1.2.6.41.1. Description](cx2341x-devel.md#id208)
      - [9.1.2.6.41.2. Param[0]](cx2341x-devel.md#id209)
      - [9.1.2.6.41.3. Param[1]](cx2341x-devel.md#id210)
  - [9.1.2.7. Decoder firmware API description](cx2341x-devel.md#decoder-firmware-api-description)
    - [9.1.2.7.1. CX2341X_DEC_PING_FW](cx2341x-devel.md#cx2341x-dec-ping-fw)
      - [9.1.2.7.1.1. Description](cx2341x-devel.md#id211)
    - [9.1.2.7.2. CX2341X_DEC_START_PLAYBACK](cx2341x-devel.md#cx2341x-dec-start-playback)
      - [9.1.2.7.2.1. Description](cx2341x-devel.md#id212)
      - [9.1.2.7.2.2. Param[0]](cx2341x-devel.md#id213)
      - [9.1.2.7.2.3. Param[1]](cx2341x-devel.md#id214)
    - [9.1.2.7.3. CX2341X_DEC_STOP_PLAYBACK](cx2341x-devel.md#cx2341x-dec-stop-playback)
      - [9.1.2.7.3.1. Description](cx2341x-devel.md#id215)
      - [9.1.2.7.3.2. Param[0]](cx2341x-devel.md#id216)
      - [9.1.2.7.3.3. Param[1]](cx2341x-devel.md#id217)
      - [9.1.2.7.3.4. Param[2]](cx2341x-devel.md#id218)
    - [9.1.2.7.4. CX2341X_DEC_SET_PLAYBACK_SPEED](cx2341x-devel.md#cx2341x-dec-set-playback-speed)
      - [9.1.2.7.4.1. Description](cx2341x-devel.md#id219)
      - [9.1.2.7.4.2. Param[0]](cx2341x-devel.md#id220)
      - [9.1.2.7.4.3. Param[1]](cx2341x-devel.md#id221)
      - [9.1.2.7.4.4. Param[2]](cx2341x-devel.md#id222)
      - [9.1.2.7.4.5. Param[3]](cx2341x-devel.md#id223)
      - [9.1.2.7.4.6. Param[4]](cx2341x-devel.md#id224)
      - [9.1.2.7.4.7. Param[5]](cx2341x-devel.md#id225)
      - [9.1.2.7.4.8. Param[6]](cx2341x-devel.md#id226)
    - [9.1.2.7.5. CX2341X_DEC_STEP_VIDEO](cx2341x-devel.md#cx2341x-dec-step-video)
      - [9.1.2.7.5.1. Description](cx2341x-devel.md#id227)
      - [9.1.2.7.5.2. Param[0]](cx2341x-devel.md#id228)
    - [9.1.2.7.6. CX2341X_DEC_SET_DMA_BLOCK_SIZE](cx2341x-devel.md#cx2341x-dec-set-dma-block-size)
      - [9.1.2.7.6.1. Description](cx2341x-devel.md#id229)
      - [9.1.2.7.6.2. Param[0]](cx2341x-devel.md#id230)
    - [9.1.2.7.7. CX2341X_DEC_GET_XFER_INFO](cx2341x-devel.md#cx2341x-dec-get-xfer-info)
      - [9.1.2.7.7.1. Description](cx2341x-devel.md#id231)
      - [9.1.2.7.7.2. Result[0]](cx2341x-devel.md#id232)
      - [9.1.2.7.7.3. Result[1]](cx2341x-devel.md#id233)
      - [9.1.2.7.7.4. Result[2]](cx2341x-devel.md#id234)
      - [9.1.2.7.7.5. Result[3]](cx2341x-devel.md#id235)
    - [9.1.2.7.8. CX2341X_DEC_GET_DMA_STATUS](cx2341x-devel.md#cx2341x-dec-get-dma-status)
      - [9.1.2.7.8.1. Description](cx2341x-devel.md#id236)
      - [9.1.2.7.8.2. Result[0]](cx2341x-devel.md#id237)
      - [9.1.2.7.8.3. Result[1]](cx2341x-devel.md#id238)
    - [9.1.2.7.9. CX2341X_DEC_SCHED_DMA_FROM_HOST](cx2341x-devel.md#cx2341x-dec-sched-dma-from-host)
      - [9.1.2.7.9.1. Description](cx2341x-devel.md#id239)
      - [9.1.2.7.9.2. Param[0]](cx2341x-devel.md#id240)
      - [9.1.2.7.9.3. Param[1]](cx2341x-devel.md#id241)
      - [9.1.2.7.9.4. Param[2]](cx2341x-devel.md#id242)
    - [9.1.2.7.10. CX2341X_DEC_PAUSE_PLAYBACK](cx2341x-devel.md#cx2341x-dec-pause-playback)
      - [9.1.2.7.10.1. Description](cx2341x-devel.md#id243)
      - [9.1.2.7.10.2. Param[0]](cx2341x-devel.md#id244)
    - [9.1.2.7.11. CX2341X_DEC_HALT_FW](cx2341x-devel.md#cx2341x-dec-halt-fw)
      - [9.1.2.7.11.1. Description](cx2341x-devel.md#id245)
    - [9.1.2.7.12. CX2341X_DEC_SET_STANDARD](cx2341x-devel.md#cx2341x-dec-set-standard)
      - [9.1.2.7.12.1. Description](cx2341x-devel.md#id246)
      - [9.1.2.7.12.2. Param[0]](cx2341x-devel.md#id247)
    - [9.1.2.7.13. CX2341X_DEC_GET_VERSION](cx2341x-devel.md#cx2341x-dec-get-version)
      - [9.1.2.7.13.1. Description](cx2341x-devel.md#id248)
      - [9.1.2.7.13.2. Result[0]](cx2341x-devel.md#id249)
    - [9.1.2.7.14. CX2341X_DEC_SET_STREAM_INPUT](cx2341x-devel.md#cx2341x-dec-set-stream-input)
      - [9.1.2.7.14.1. Description](cx2341x-devel.md#id250)
      - [9.1.2.7.14.2. Param[0]](cx2341x-devel.md#id251)
    - [9.1.2.7.15. CX2341X_DEC_GET_TIMING_INFO](cx2341x-devel.md#cx2341x-dec-get-timing-info)
      - [9.1.2.7.15.1. Description](cx2341x-devel.md#id252)
      - [9.1.2.7.15.2. Result[0]](cx2341x-devel.md#id253)
      - [9.1.2.7.15.3. Result[1]](cx2341x-devel.md#id254)
      - [9.1.2.7.15.4. Result[2]](cx2341x-devel.md#id255)
      - [9.1.2.7.15.5. Result[3]](cx2341x-devel.md#id256)
      - [9.1.2.7.15.6. Result[4]](cx2341x-devel.md#id257)
    - [9.1.2.7.16. CX2341X_DEC_SET_AUDIO_MODE](cx2341x-devel.md#cx2341x-dec-set-audio-mode)
      - [9.1.2.7.16.1. Description](cx2341x-devel.md#id258)
      - [9.1.2.7.16.2. Param[0]](cx2341x-devel.md#id259)
      - [9.1.2.7.16.3. Param[1]](cx2341x-devel.md#id260)
    - [9.1.2.7.17. CX2341X_DEC_SET_EVENT_NOTIFICATION](cx2341x-devel.md#cx2341x-dec-set-event-notification)
      - [9.1.2.7.17.1. Description](cx2341x-devel.md#id261)
      - [9.1.2.7.17.2. Param[0]](cx2341x-devel.md#id262)
      - [9.1.2.7.17.3. Param[1]](cx2341x-devel.md#id263)
      - [9.1.2.7.17.4. Param[2]](cx2341x-devel.md#id264)
      - [9.1.2.7.17.5. Param[3]](cx2341x-devel.md#id265)
    - [9.1.2.7.18. CX2341X_DEC_SET_DISPLAY_BUFFERS](cx2341x-devel.md#cx2341x-dec-set-display-buffers)
      - [9.1.2.7.18.1. Description](cx2341x-devel.md#id266)
      - [9.1.2.7.18.2. Param[0]](cx2341x-devel.md#id267)
    - [9.1.2.7.19. CX2341X_DEC_EXTRACT_VBI](cx2341x-devel.md#cx2341x-dec-extract-vbi)
      - [9.1.2.7.19.1. Description](cx2341x-devel.md#id268)
      - [9.1.2.7.19.2. Param[0]](cx2341x-devel.md#id269)
      - [9.1.2.7.19.3. Result[0]](cx2341x-devel.md#id270)
      - [9.1.2.7.19.4. Result[1]](cx2341x-devel.md#id271)
    - [9.1.2.7.20. CX2341X_DEC_SET_DECODER_SOURCE](cx2341x-devel.md#cx2341x-dec-set-decoder-source)
      - [9.1.2.7.20.1. Description](cx2341x-devel.md#id272)
      - [9.1.2.7.20.2. Param[0]](cx2341x-devel.md#id273)
      - [9.1.2.7.20.3. Param[1]](cx2341x-devel.md#id274)
      - [9.1.2.7.20.4. Param[2]](cx2341x-devel.md#id275)
      - [9.1.2.7.20.5. Param[3]](cx2341x-devel.md#id276)
    - [9.1.2.7.21. CX2341X_DEC_SET_PREBUFFERING](cx2341x-devel.md#cx2341x-dec-set-prebuffering)
      - [9.1.2.7.21.1. Description](cx2341x-devel.md#id277)
      - [9.1.2.7.21.2. Param[0]](cx2341x-devel.md#id278)
  - [9.1.2.8. PVR350 Video decoder registers 0x02002800 -> 0x02002B00](cx2341x-devel.md#pvr350-video-decoder-registers-0x02002800-0x02002b00)
  - [9.1.2.9. The cx231xx DMA engine](cx2341x-devel.md#the-cx231xx-dma-engine)
    - [9.1.2.9.1. Introduction](cx2341x-devel.md#introduction)
    - [9.1.2.9.2. Flow](cx2341x-devel.md#flow)
    - [9.1.2.9.3. Mailbox #10](cx2341x-devel.md#mailbox-10)
    - [9.1.2.9.4. Scatter-Gather Array](cx2341x-devel.md#scatter-gather-array)
    - [9.1.2.9.5. DMA Transfer Status](cx2341x-devel.md#dma-transfer-status)
- [9.1.3. The cx88 driver](cx88-devel.md)
  - [9.1.3.1. Documentation missing at the cx88 datasheet](cx88-devel.md#documentation-missing-at-the-cx88-datasheet)
  - [9.1.3.2. Hauppauge WinTV cx88 IR information](cx88-devel.md#hauppauge-wintv-cx88-ir-information)
    - [9.1.3.2.1. Additional info](cx88-devel.md#additional-info)
- [9.1.4. The Samsung S5P/EXYNOS4 FIMC driver](fimc-devel.md)
  - [9.1.4.1. Files partitioning](fimc-devel.md#files-partitioning)
- [9.1.5. The pvrusb2 driver](pvrusb2.md)
  - [9.1.5.1. Background](pvrusb2.md#background)
  - [9.1.5.2. Building](pvrusb2.md#building)
  - [9.1.5.3. Source file list / functional overview](pvrusb2.md#source-file-list-functional-overview)
- [9.1.6. PXA-Camera Host Driver](pxa_camera.md)
  - [9.1.6.1. Constraints](pxa_camera.md#constraints)
  - [9.1.6.2. Global video workflow](pxa_camera.md#global-video-workflow)
  - [9.1.6.3. DMA usage](pxa_camera.md#dma-usage)
- [9.1.7. The Radiotrack radio driver](radiotrack.md)
  - [9.1.7.1. ACKNOWLEDGMENTS](radiotrack.md#acknowledgments)
  - [9.1.7.2. WHY THIS DOCUMENT?](radiotrack.md#why-this-document)
  - [9.1.7.3. PHYSICAL DESCRIPTION](radiotrack.md#physical-description)
  - [9.1.7.4. CONTROLLING THE CARD WITH IOPORT](radiotrack.md#controlling-the-card-with-ioport)
  - [9.1.7.5. PROGRAMMING EXAMPLES](radiotrack.md#programming-examples)
- [9.1.8. The Rockchip Image Signal Processor Driver (rkisp1)](rkisp1.md)
  - [9.1.8.1. Versions and their differences](rkisp1.md#versions-and-their-differences)
  - [9.1.8.2. Changes from V10 to V12](rkisp1.md#changes-from-v10-to-v12)
  - [9.1.8.3. Changes from V12 to V13](rkisp1.md#changes-from-v12-to-v13)
- [9.1.9. The saa7134 driver](saa7134-devel.md)
  - [9.1.9.1. Card Variations:](saa7134-devel.md#card-variations)
  - [9.1.9.2. LifeView GPIOs](saa7134-devel.md#lifeview-gpios)
  - [9.1.9.3. Credits](saa7134-devel.md#credits)
- [9.1.10. Cropping and Scaling algorithm, used in the sh_mobile_ceu_camera driver](sh_mobile_ceu_camera.md)
  - [9.1.10.1. Terminology](sh_mobile_ceu_camera.md#terminology)
  - [9.1.10.2. Generic scaling / cropping scheme](sh_mobile_ceu_camera.md#generic-scaling-cropping-scheme)
  - [9.1.10.3. S_FMT](sh_mobile_ceu_camera.md#s-fmt)
  - [9.1.10.4. S_CROP](sh_mobile_ceu_camera.md#s-crop)
- [9.1.11. Tuner drivers](tuners.md)
  - [9.1.11.1. Simple tuner Programming](tuners.md#simple-tuner-programming)
  - [9.1.11.2. Tuner Manufacturers](tuners.md#tuner-manufacturers)
- [9.1.12. The Virtual Media Controller Driver (vimc)](vimc-devel.md)
  - [9.1.12.1. Source code documentation](vimc-devel.md#source-code-documentation)
    - [9.1.12.1.1. vimc-streamer](vimc-devel.md#vimc-streamer)
- [9.1.13. The Zoran driver](zoran.md)
  - [9.1.13.1. Frequently Asked Questions](zoran.md#frequently-asked-questions)
  - [9.1.13.2. What cards are supported](zoran.md#what-cards-are-supported)
    - [9.1.13.2.1. Iomega Buz](zoran.md#iomega-buz)
    - [9.1.13.2.2. AverMedia 6 Eyes AVS6EYES](zoran.md#avermedia-6-eyes-avs6eyes)
    - [9.1.13.2.3. Linux Media Labs LML33](zoran.md#linux-media-labs-lml33)
    - [9.1.13.2.4. Linux Media Labs LML33R10](zoran.md#linux-media-labs-lml33r10)
    - [9.1.13.2.5. Pinnacle/Miro DC10(new)](zoran.md#pinnacle-miro-dc10-new)
    - [9.1.13.2.6. Pinnacle/Miro DC10+](zoran.md#pinnacle-miro-dc10)
    - [9.1.13.2.7. Pinnacle/Miro DC10(old)](zoran.md#pinnacle-miro-dc10-old)
    - [9.1.13.2.8. Pinnacle/Miro DC30](zoran.md#pinnacle-miro-dc30)
    - [9.1.13.2.9. Pinnacle/Miro DC30+](zoran.md#id1)
  - [9.1.13.3. 1.1 What the TV decoder can do an what not](zoran.md#what-the-tv-decoder-can-do-an-what-not)
    - [9.1.13.3.1. Philips saa7111 TV decoder](zoran.md#philips-saa7111-tv-decoder)
    - [9.1.13.3.2. Philips saa7110a TV decoder](zoran.md#philips-saa7110a-tv-decoder)
    - [9.1.13.3.3. Philips saa7114 TV decoder](zoran.md#philips-saa7114-tv-decoder)
    - [9.1.13.3.4. Brooktree bt819 TV decoder](zoran.md#brooktree-bt819-tv-decoder)
    - [9.1.13.3.5. Micronas vpx3220a TV decoder](zoran.md#micronas-vpx3220a-tv-decoder)
    - [9.1.13.3.6. Samsung ks0127 TV decoder](zoran.md#samsung-ks0127-tv-decoder)
  - [9.1.13.4. What the TV encoder can do an what not](zoran.md#what-the-tv-encoder-can-do-an-what-not)
    - [9.1.13.4.1. Philips saa7185 TV Encoder](zoran.md#philips-saa7185-tv-encoder)
    - [9.1.13.4.2. Brooktree bt856 TV Encoder](zoran.md#brooktree-bt856-tv-encoder)
    - [9.1.13.4.3. Analog Devices adv7170 TV Encoder](zoran.md#analog-devices-adv7170-tv-encoder)
    - [9.1.13.4.4. Analog Devices adv7175 TV Encoder](zoran.md#analog-devices-adv7175-tv-encoder)
    - [9.1.13.4.5. ITT mse3000 TV encoder](zoran.md#itt-mse3000-tv-encoder)
    - [9.1.13.4.6. Conexant bt866 TV encoder](zoran.md#conexant-bt866-tv-encoder)
  - [9.1.13.5. How do I get this damn thing to work](zoran.md#how-do-i-get-this-damn-thing-to-work)
  - [9.1.13.6. What mainboard should I use (or why doesn’t my card work)](zoran.md#what-mainboard-should-i-use-or-why-doesn-t-my-card-work)
  - [9.1.13.7. Programming interface](zoran.md#programming-interface)
  - [9.1.13.8. Applications](zoran.md#applications)
  - [9.1.13.9. Concerning buffer sizes, quality, output size etc.](zoran.md#concerning-buffer-sizes-quality-output-size-etc)
  - [9.1.13.10. It hangs/crashes/fails/whatevers! Help!](zoran.md#it-hangs-crashes-fails-whatevers-help)
  - [9.1.13.11. Maintainers/Contacting](zoran.md#maintainers-contacting)
  - [9.1.13.12. Driver’s License](zoran.md#driver-s-license)
- [9.1.14. MIPI CCS camera sensor driver](ccs/ccs.md)
  - [9.1.14.1. CCS static data](ccs/ccs.md#ccs-static-data)
    - [9.1.14.1.1. CCS tools](ccs/ccs.md#ccs-tools)
  - [9.1.14.2. Register definition generator](ccs/ccs.md#register-definition-generator)
    - [9.1.14.2.1. Usage](ccs/ccs.md#usage)
- [9.1.15. CCS PLL calculator](ccs/ccs.md#ccs-pll-calculator)
- [9.1.16. Intel IPU6 Driver](ipu6.md)
  - [9.1.16.1. Overview](ipu6.md#overview)
  - [9.1.16.2. Buttress](ipu6.md#buttress)
    - [9.1.16.2.1. ISYS and PSYS Power flow](ipu6.md#isys-and-psys-power-flow)
    - [9.1.16.2.2. Interrupt](ipu6.md#interrupt)
    - [9.1.16.2.3. Security and firmware authentication](ipu6.md#security-and-firmware-authentication)
    - [9.1.16.2.4. Global timer sync](ipu6.md#global-timer-sync)
  - [9.1.16.3. DMA and MMU](ipu6.md#dma-and-mmu)
  - [9.1.16.4. Firmware file format](ipu6.md#firmware-file-format)
  - [9.1.16.5. Syscom interface](ipu6.md#syscom-interface)
  - [9.1.16.6. Input System](ipu6.md#input-system)
    - [9.1.16.6.1. D-PHYs and CSI-2 ports lane mapping](ipu6.md#d-phys-and-csi-2-ports-lane-mapping)
    - [9.1.16.6.2. ISYS firmware ABIs](ipu6.md#isys-firmware-abis)

## 9.2. Digital TV drivers

- [9.2.1. Idea behind the dvb-usb-framework](dvb-usb.md)
  - [9.2.1.1. Supported devices](dvb-usb.md#supported-devices)
  - [9.2.1.2. How to use?](dvb-usb.md#how-to-use)
    - [9.2.1.2.1. Firmware](dvb-usb.md#firmware)
    - [9.2.1.2.2. Compiling](dvb-usb.md#compiling)
    - [9.2.1.2.3. Loading the drivers](dvb-usb.md#loading-the-drivers)
  - [9.2.1.3. Known problems and bugs](dvb-usb.md#known-problems-and-bugs)
    - [9.2.1.3.1. Adding support for devices](dvb-usb.md#adding-support-for-devices)
    - [9.2.1.3.2. USB1.1 Bandwidth limitation](dvb-usb.md#usb1-1-bandwidth-limitation)
    - [9.2.1.3.3. Comments](dvb-usb.md#comments)
  - [9.2.1.4. 3. Acknowledgements](dvb-usb.md#acknowledgements)
- [9.2.2. Frontend drivers](frontends.md)
  - [9.2.2.1. Frontend attach headers](frontends.md#frontend-attach-headers)
- [9.2.3. vidtv: Virtual Digital TV driver](vidtv.md)
  - [9.2.3.1. Background](vidtv.md#background)
  - [9.2.3.2. Building vidtv](vidtv.md#building-vidtv)
  - [9.2.3.3. Running vidtv](vidtv.md#running-vidtv)
  - [9.2.3.4. Command-line arguments to vidtv](vidtv.md#command-line-arguments-to-vidtv)
  - [9.2.3.5. vidtv internal structure](vidtv.md#vidtv-internal-structure)
  - [9.2.3.6. Testing vidtv with v4l-utils](vidtv.md#testing-vidtv-with-v4l-utils)
    - [9.2.3.6.1. Using dvb-fe-tool](vidtv.md#using-dvb-fe-tool)
    - [9.2.3.6.2. Using dvb-scan](vidtv.md#using-dvb-scan)
    - [9.2.3.6.3. Using dvb-zap](vidtv.md#using-dvb-zap)
  - [9.2.3.7. What can still be improved in vidtv](vidtv.md#what-can-still-be-improved-in-vidtv)
    - [9.2.3.7.1. Add *debugfs* integration](vidtv.md#add-debugfs-integration)
    - [9.2.3.7.2. Add a way to test video](vidtv.md#add-a-way-to-test-video)
    - [9.2.3.7.3. Add white noise simulation](vidtv.md#add-white-noise-simulation)
  - [9.2.3.8. Functions and structs used within vidtv](vidtv.md#functions-and-structs-used-within-vidtv)
- [9.2.4. Contributors](contributors.md)
